[package]
name = "num-shaman"
version = "0.1.0"
license = "Unlicense"
description = "Partial implementation of inteval arithmetic for numerical robustness analysis"
homepage = "https://github.com/Lemmih/num-shaman"
repository = "https://github.com/Lemmih/num-shaman"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3"
ieee754 = "0.2"

[build-dependencies]
cc = "1.0"
